--- a/Links/index.html
+++ b/Links/index.html
@@ -9,6 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="../Static/CSS/All.css" />
+    <link rel="icon" href="Static/favicon.ico" />
   </head>
   <body>
     <script src="../Static/upper.js"></script>
