--- a/index.html
+++ b/index.html
@@ -55,5 +55,26 @@
     </main>
 
     <script src="Static/footer.js"></script>
+
+    <script>
+      //buttons
+      const infBtn = document.getElementById("infBtn");
+      const lnkBtn = document.getElementById("lnkBtn");
+      const prjBtn = document.getElementById("prjBtn");
+      const datBtn = document.getElementById("datBtn");
+
+      infBtn.addEventListener("click", () => {
+        window.location.assign("https://antimrs.ru/Info");
+      });
+      lnkBtn.addEventListener("click", () => {
+        window.location.assign("https://antimrs.ru/Links");
+      });
+      prjBtn.addEventListener("click", () => {
+        window.location.assign("https://antimrs.ru/Projects");
+      });
+      datBtn.addEventListener("click", () => {
+        window.location.assign("https://antimrs.ru/Data");
+      });
+    </script>
   </body>
 </html>
