Added hyper-link class

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -20,31 +20,31 @@
         <p>Этот страница создана для того, чтобы пречислить все мои проекты.</p>
         <h3>Виджеты</h3>
         <div>
-          @ URL: <a href="http://dev.antimrs.ru">dev.antimrs.ru</a>
-          <h2>Змейка</h2>
+          @ URL: <a class="hyper-link" href="http://dev.antimrs.ru">dev.antimrs.ru</a>
+          <h4>Змейка</h4>
           <div>
-           @ URL: <a href="http://dev.antimrs.ru/snake">dev.antimrs.ru/snake</a> 
+           @ URL: <a class="hyper-link" href="http://dev.antimrs.ru/snake">dev.antimrs.ru/snake</a> 
           </div>
         </div>
         <h3>Textomania</h3>
         <div>
-          @ URL: <a href="https://antimrs.online">antimrs.online</a><br /><i
+          @ URL: <a class="hyper-link" href="https://antimrs.online">antimrs.online</a><br /><i
             class="fab fa-github"
           ></i>
           GitHub:
-          <a href="https://github.com/antiMRS/BrowserGame">github.com</a>
+          <a class="hyper-link" href="https://github.com/antiMRS/BrowserGame">github.com</a>
         </div>
         <br />
         <h3>Этот сайт</h3>
         <br />
         <h3>YouTube Канал</h3>
         <div>
-          @ URL: <a href="https://www.youtube.com/@antiMRS?sub_confirmation=1">www.youtube.com/@antiMRS</a>
+          @ URL: <a class="hyper-link" href="https://www.youtube.com/@antiMRS?sub_confirmation=1">www.youtube.com/@antiMRS</a>
         </div>
         <br />
         <h3>Telegram Канал</h3>
         <div>
-          <i class="fab fa-telegram"></i>: <a href="https://t.me/antimrs">@antimrs</a>
+          <i class="fab fa-telegram"></i>Telegram: <a class="hyper-link" href="https://t.me/antimrs">@antimrs</a>
         </div>
       </section>
     </main>
