--- a/Info/index.html
+++ b/Info/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -28,20 +28,5 @@
     </main>
 
     <script src="../Static/footer.js"></script>
-
-    <script>
-      const themeToggle = document.getElementById("themeToggle");
-      const body = document.body;
-
-      themeToggle.addEventListener("click", () => {
-        body.classList.toggle("dark-theme");
-
-        if (body.classList.contains("dark-theme")) {
-          themeToggle.innerHTML = '<i class="fas fa-sun"></i>';
-        } else {
-          themeToggle.innerHTML = '<i class="fas fa-moon"></i>';
-        }
-      });
-    </script>
   </body>
 </html>
